# bikeshare-forecast

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
data/reference/: chicago_events.csv  station_mapping.csv
flows/: nightly_forecast.py
notebooks/: 01_eda.ipynb  02_baselines.ipynb  03_error_analysis.ipynb
scripts/: read_day5_leaderboard.py  replay.py  run_day1.py  run_day4_variants.py  run_day5_final.py  run_day5_tuning.py  run_monitoring.py
src/ingestion/: divvy.py  weather.py
src/monitoring/: checks.py
src/processing/: aggregate.py  build_features.py  cleaning.py  features.py
src/serving/: api.py  batch_predict.py  evaluate.py  inference_features.py  model_artifact.py
src/training/: backtest.py  clustering.py  events.py  models.py  promote.py  run_experiment.py  train_production.py
tests/: test_divvy.py  test_events.py  test_weather.py  test_week2_backtest.py  test_week2_processing.py  test_week3.py  test_week4.py  test_week5.py
